<resources>
    <string name="app_name">Money Saver</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="bills">Счета</string>
    <string name="add_bill">Добавить новый счет</string>
    <string name="save">Сохранить</string>
    <string name="expenses">Расходы</string>
    <string name="income">Доходы</string>
    <string name="name">Название</string>
    <string name="billType">Тип счёта</string>
    <string name="title_transactions">Операции</string>
    <string name="balance">Баланс</string>
    <string name="title_planned_bills">Запланированные траты</string>
    <string name="title_analysis">Анализ расходов</string>
    <string name="title_profile">Профиль</string>
    <string name="title_planned_bills_short">Планы</string>
    <string name="title_analysis_short">Анализ</string>
    <string name="month_income">Доходы за месяц</string>
    <string name="month_expenses">Расходы за месяц</string>
    <string name="edit">Редактировать</string>
    <string name="delete_bill">Удалить счет</string>
    <string name="categoryTo">Категория относится к:</string>
    <string name="addCategory">Добавить категорию</string>
    <string name="category">Категория</string>
    <string name="selectCategory">Выберите категорию...</string>
    <string name="description">Описание</string>
    <string name="price">Стоимость</string>
    <string name="bill">Счет</string>
    <string name="transactionTime">Время операции</string>
    <string name="time">Время...</string>
    <string name="deleteTransaction">Удалить операцию</string>
    <string name="isPlannedTransaction">Запланированная операция</string>
    <string name="enter_account">Войти в аккаунт</string>
    <string name="light_theme">Светлая</string>
    <string name="dark_theme">Темная</string>
    <string name="oled_theme">OLED</string>
    <string name="planned_bills">Запланированные расходы</string>
</resources>