<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_transactions">

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="com.borsch_team.moneysaver.ui.transactions.TransactionsFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/navigation_planned_bills"
        android:name="com.borsch_team.moneysaver.ui.planned_bills.PlannedBillsFragment"
        android:label="@string/title_planned_bills"
        tools:layout="@layout/fragment_planned_bills" />

    <fragment
        android:id="@+id/navigation_analysis"
        android:name="com.borsch_team.moneysaver.ui.analysis.AnalysisFragment"
        android:label="@string/title_analysis"
        tools:layout="@layout/fragment_analysis" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.borsch_team.moneysaver.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />


</navigation>