<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="18dp"
            android:background="@drawable/bill_background_card_flat">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Название"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="18dp"
                android:layout_marginStart="12dp" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0 Р"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tv_trans_name"
                android:layout_marginStart="12dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="12dp"
            android:paddingBottom="18dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month_expenses"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/month_expenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 Р"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month_income"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/month_incomes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 Р"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView8" />

            <TextView
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CustomButton"
                android:text="@string/edit"
                android:layout_marginTop="128dp"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>